--- a/styles/style.css
+++ b/styles/style.css
@@ -457,3 +457,34 @@ section {
     border: 1px solid #aaaaaa1c;
   }
 }
+
+
+/*    FORM      */
+
+form {
+  margin: 0 auto;
+  width: 300px;
+  padding: 20px;
+  border: 1px solid #ccc;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  color: #0d1117;
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
