--- a/styles/style.css
+++ b/styles/style.css
@@ -140,6 +140,25 @@ section {
 }
 
 /* WhatsApp Btn */
+
+.whatsapp {
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom:40px;
+  right:40px;
+  background-color:#25d366;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  font-size:30px;
+  z-index:100;
+}
+
+.whatsapp-icon {
+  margin-top:13px;
+}
+
 .wp-btn {
   position: fixed;
   right: 0;
