Re-Build: Form - Embed

--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,24 @@ section {
   gap: 0 40px;
 }
 
+.section-3 {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 40px;
+}
+
+.section-4 {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 40px;
+}
+
+.section-5 {
+  display: flex;
+  justify-content: space-between;
+  gap: 0 40px;
+}
+
 /* WhatsApp Btn */
 
 .whatsapp {
@@ -324,10 +342,6 @@ section {
   text-align: center;
 }
 
-.form-container > iframe {
-  border-radius: 10px;
-}
-
 /* Responsive design */
 /* Tablet */
 @media (width <= 950px) {
@@ -457,37 +471,22 @@ section {
 
 /*    FORM      */
 
-form {
-  margin: 0 auto;
-  width: 300px;
-  padding: 20px;
-  border: 1px solid #ccc;
+.form-frame {
+  width: auto;
+  height: 700px;
   align-content: center;
+  border-radius: 50px;
+  }
+
+.iframe{
+  border-radius: 40px;
 }
 
-label {
-  display: block;
-  margin-bottom: 5px;
+@media (max-width: 576px) {
+  .form-frame {
+    width: 100%;
+    height: 700px;
+    flex: 1 1 100%;
+  }
 }
 
-input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  color: #0d1117;
-}
-
-.form-group{
-  margin: auto;
-  padding: initial;
-  align-content: center;
-}
-
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-}
